tests/baselines/reference/defaultExportsCannotMerge04(strict=true).errors.txt
defaultExportsCannotMerge04.ts(1,25): error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
defaultExportsCannotMerge04.ts(4,11): error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
defaultExportsCannotMerge04.ts(5,16): error TS7005: Variable 'x' implicitly has an 'any' type.
defaultExportsCannotMerge04.ts(8,11): error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
defaultExportsCannotMerge04.ts(11,18): error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.


==== defaultExportsCannotMerge04.ts (5 errors) ====
    export default function Foo() {
                            ~~~
!!! error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
    }
    
    namespace Foo {
              ~~~
!!! error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
        export var x;
                   ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
    }
    
    interface Foo {
              ~~~
!!! error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
    }
    
    export interface Foo {
                     ~~~
!!! error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
    }